--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
